Added more basis

--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,8 @@ skipdist = True
 [testenv]
 deps=
     pytest
+    coverage
     codecov
 commands=
-coverage run --source=Learning -m pytest
-codecov --token=6db1dbb7-eec9-4703-ba46-c6d06c91f30c
+    coverage run --source=Learning -m pytest
+    codecov --token=6db1dbb7-eec9-4703-ba46-c6d06c91f30c
